@@ -1,35 +1,20 @@
 package org.more_blocks_and_items_team.more_decorative_blocks.tools;
 
-import org.jetbrains.annotations.NotNull;
-
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
-import java.net.URI;
 import java.net.URL;
 
 public class VersionChecker {
     private static final String GITHUB_API_URL = "https://api.github.com/repos/MBI-Team/More-Decorative-Blocks/releases/latest";
 
     public static String getLatestVersion() throws IOException {
-        try {
-            URI uri = URI.create(GITHUB_API_URL);
-            URL url = uri.toURL();
-            HttpURLConnection connection = (HttpURLConnection) url.openConnection();
-            connection.setRequestMethod("GET");
-            connection.setRequestProperty("User-Agent", "Mozilla/5.0");
+        URL url = new URL(GITHUB_API_URL);
+        HttpURLConnection connection = (HttpURLConnection) url.openConnection();
+        connection.setRequestMethod("GET");
+        connection.setRequestProperty("User-Agent", "Mozilla/5.0");
 
-            final String jsonResponse = getResponse(connection);
-            String version = extractValue(jsonResponse);
-
-            return version != null ? version : "unknown";
-        } catch (IllegalArgumentException e) {
-            throw new IOException("Invalid URI: " + e.getMessage(), e);
-        }
-    }
-
-    private static @NotNull String getResponse(HttpURLConnection connection) throws IOException {
         if (connection.getResponseCode() != 200) {
             throw new IOException("Failed to fetch version: HTTP code " + connection.getResponseCode());
         }
@@ -44,7 +29,10 @@ public class VersionChecker {
         reader.close();
 
         // 提取版本号（假设返回的是 JSON，如 {"tag_name":"v1.0.0"}）
-        return response.toString();
+        String jsonResponse = response.toString();
+        String version = extractValue(jsonResponse);
+
+        return version != null ? version : "unknown";
     }
 
     private static String extractValue(String json) {
